# porkill

./: .coverage  .gitignore  LICENSE  README-packaging.md  README.md  build.sh  com.github.a_issaoui.porkill.metainfo.xml  com.github.a_issaoui.porkill.yml  entrypoint.py  nfpm.yaml  porkill.desktop  porkill.py  pyproject.toml  requirements.txt  snapcraft.yaml  test_porkill.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
