[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "porkill"
dynamic = ["version"]
authors = [
  { name="a-issaoui", email="a.issaoui@aol.co.uk" },
]
description = "A cyberpunk-themed PyQt6 GUI for monitoring and killing Linux processes by port"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PyQt6>=6.4.0",
]

[project.urls]
"Homepage"    = "https://github.com/a-issaoui/porkill"
"Bug Tracker" = "https://github.com/a-issaoui/porkill/issues"
"Changelog"   = "https://github.com/a-issaoui/porkill/releases"

[project.scripts]
porkill = "porkill:main"

[tool.setuptools]
py-modules = ["porkill"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["."]

[tool.coverage.run]
source = ["porkill"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Real bug-catching rules. isort (I) is intentionally NOT enabled: the PyQt6
# imports are deliberately placed after the _check_pyqt6() runtime guard and
# must not be hoisted to the top of the module.
select = ["E", "F", "W", "B", "SIM"]
ignore = [
    "E701",   # compact one-line guards (`if age < 5: return ...`) are intentional
    "E702",   # compact semicolon assignments in hot color/brush setup are intentional
    "E703",   # trailing semicolons match the codebase's compact style
    "E731",   # lambda sort-keys are clearer inline than a def in this context
    "E741",   # short throwaway UI locals (l = QLabel(...))
    "E501",   # long lines are mostly Qt stylesheet strings
    "SIM105", # explicit try/except/pass reads clearer than contextlib.suppress here
    "B008",   # Qt default-argument patterns
]

[tool.ruff.lint.per-file-ignores]
# entrypoint sets sys.path before importing porkill (AppImage layout).
"entrypoint.py" = ["E402"]
# the test harness injects Qt mocks into sys.modules before importing porkill,
# so its imports legitimately come after setup code.
"test_porkill.py" = ["E402", "SIM117"]

[tool.mypy]
# Type-check the application module. The test module is intentionally excluded:
# it defines loose Qt mock shims that are not meant to satisfy the real stubs.
# python_version is 3.10 (mypy's minimum target); the 3.9 *runtime* is still
# exercised by the pytest matrix.
python_version = "3.10"
files = ["porkill.py"]
warn_redundant_casts = true